--- a/src/Dex.SecurityToken/Dex.SecurityTokenProvider/Dex.SecurityTokenProvider.csproj
+++ b/src/Dex.SecurityToken/Dex.SecurityTokenProvider/Dex.SecurityTokenProvider.csproj
@@ -5,10 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
-        <PackageVersion>2.2.6</PackageVersion>
+        <PackageVersion>2.2.7</PackageVersion>
         <PackageTags>security token management, dataprotection</PackageTags>
     </PropertyGroup>
-    
+
     <!--Для NuGet-->
     <PropertyGroup>
         <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.SecurityToken</PackageProjectUrl>
@@ -22,13 +22,13 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <!--/Для NuGet-->
-    
+
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="6.0.12" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"/>
+        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations"/>
     </ItemGroup>
 </Project>
