--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup>
-    <FrameworkVersion>6.0.20</FrameworkVersion>
+    <FrameworkVersion>6.0.29</FrameworkVersion>
     <EntityFrameworkVersion>6.0.29</EntityFrameworkVersion>
     <ExtensionsVersion>[8.0.0,8.0.4]</ExtensionsVersion>
   </PropertyGroup>
@@ -25,6 +25,8 @@
     <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
 
     
     <!--misc -->
@@ -33,18 +35,8 @@
     <PackageReference Update="Neo4jClient" Version="5.1.15" />
     <PackageReference Update="MassTransit*" Version="8.2.2" />
     
-    <!--https://github.com/IdentityServer/IdentityServer4/issues/4285-->
-    <PackageReference Update="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Update="System.Security.Principal.Windows" Version="4.7.0" />
-    <PackageReference Update="AutoMapper" Version="[12.0.1, 13)" />
-    
     <!--microsoft asp.net core -->
-    <PackageReference Update="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.32" />
-    <PackageReference Update="Microsoft.AspNetCore.TestHost" Version="$(FrameworkVersion)" />
-    <PackageReference Update="Microsoft.AspNetCore.Identity" Version="$(FrameworkVersion)" />
-    <PackageReference Update="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="$(FrameworkVersion)" />
-    <PackageReference Update="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="$(FrameworkVersion)" />
-    <PackageReference Update="Microsoft.AspNetCore.Authentication.Certificate" Version="$(FrameworkVersion)"/>
+    <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
     
     <!--microsoft entity framework -->
     <PackageReference Update="Microsoft.EntityFrameworkCore" Version="$(EntityFrameworkVersion)" />
