--- a/src/Tests/Dex.Pagination.Test/Dex.Pagination.Test.csproj
+++ b/src/Tests/Dex.Pagination.Test/Dex.Pagination.Test.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="NUnit"/>
+        <PackageReference Include="NUnit3TestAdapter"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Dex.Pagination\Dex.Pagination.csproj" />
-    <ProjectReference Include="..\Dex.TestDomain\Dex.TestDomain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Dex.Pagination\Dex.Pagination.csproj"/>
+        <ProjectReference Include="..\Dex.TestDomain\Dex.TestDomain.csproj"/>
+    </ItemGroup>
 
 </Project>
