--- a/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <PackageTags>outbox business-transaction consistency NEO4J implementation</PackageTags>
         <InformationalVersion>8.0</InformationalVersion>
-        <PackageVersion>8.0.0</PackageVersion>
+        <PackageVersion>8.0.1</PackageVersion>
+        <VersionSuffix>alpha</VersionSuffix>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
