--- a/src/Dex.Audit/Samples/Dex.Audit.ServerSample/Dex.Audit.ServerSample.csproj
+++ b/src/Dex.Audit/Samples/Dex.Audit.ServerSample/Dex.Audit.ServerSample.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6"/>
         <PackageReference Include="Dex.MassTransit.Rabbit" Version="8.0.0"/>
+        <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2"/>
