--- a/src/Dex.Audit/Dex.Audit.Client/Dex.Audit.Client.csproj
+++ b/src/Dex.Audit/Dex.Audit.Client/Dex.Audit.Client.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
         <ProjectReference Include="..\Dex.Audit.Domain\Dex.Audit.Domain.csproj"/>
     </ItemGroup>
 
