--- a/src/Dex.Audit/Dex.Audit.Server/Dex.Audit.Server.csproj
+++ b/src/Dex.Audit/Dex.Audit.Server/Dex.Audit.Server.csproj
@@ -7,7 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Audit.Client\Dex.Audit.Client.csproj" />
+        <PackageReference Include="Dex.MassTransit.Rabbit" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
