--- a/src/Dex.Audit/Dex.Audit.Server/Dex.Audit.Server.csproj
+++ b/src/Dex.Audit/Dex.Audit.Server/Dex.Audit.Server.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
+        <ProjectReference Include="..\Dex.Audit.Server.Abstractions\Dex.Audit.Server.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
