--- a/src/Dex.Cap/Dex.Cap.Common/Dex.Cap.Common.csproj
+++ b/src/Dex.Cap/Dex.Cap.Common/Dex.Cap.Common.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageTags>shared EF exceptions, extentions and helpers</PackageTags>
+        <PackageTags>shared interfaces, extentions and helpers</PackageTags>
         <InformationalVersion>8.0</InformationalVersion>
-        <PackageVersion>8.0.2</PackageVersion>
+        <PackageVersion>8.0.0</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -28,9 +29,5 @@
         <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
     </ItemGroup>
     <!--/Для NuGet-->
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" />
-    </ItemGroup>
 
 </Project>
