--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>Dex.Audit.ClientSample</RootNamespace>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
