--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFramework>net8.0</TargetFramework>        
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
