--- a/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
+++ b/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
@@ -6,7 +6,7 @@
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <PackageTags>outbox distributed events</PackageTags>
         <InformationalVersion>6.0</InformationalVersion>
-        <PackageVersion>6.0.1</PackageVersion>
+        <PackageVersion>6.0.2</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -32,6 +32,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Dex.Events.Distributed\Dex.Events.Distributed.csproj" />
       <ProjectReference Include="..\..\Dex.Cap\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj" />
+      <ProjectReference Include="..\..\Dex.Cap\Dex.Cap.Common\Dex.Cap.Common.csproj" />
     </ItemGroup>
 
 </Project>
