--- a/src/Dex.Configuration/Dex.Configuration.Dataprotection.Cli/Dex.Configuration.DataProtection/Dex.Configuration.DataProtection.csproj
+++ b/src/Dex.Configuration/Dex.Configuration.Dataprotection.Cli/Dex.Configuration.DataProtection/Dex.Configuration.DataProtection.csproj
@@ -2,11 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <PackageId>Dex.Configuration.DataProtection</PackageId>
-    <Version>1.0.0</Version>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
