--- a/src/Dex.Response.Signing/Dex.ResponseSigning.Test.Sender/Dex.ResponseSigning.Test.Sender.csproj
+++ b/src/Dex.Response.Signing/Dex.ResponseSigning.Test.Sender/Dex.ResponseSigning.Test.Sender.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Refit" Version="7.1.0" />
+    <PackageReference Include="Refit" Version="8.0.0" />
     <PackageReference Include="Refit.HttpClientFactory" Version="7.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
