--- a/src/Dex.Configuration/Dex.Configuration.ProtectedJson/Dex.Configuration.ProtectedJson/Dex.Configuration.ProtectedJson.csproj
+++ b/src/Dex.Configuration/Dex.Configuration.ProtectedJson/Dex.Configuration.ProtectedJson/Dex.Configuration.ProtectedJson.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
-        <VersionPrefix>8.0.0</VersionPrefix>
+        <InformationalVersion>8.0</InformationalVersion>
+        <PackageVersion>8.0.1</PackageVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -22,7 +23,7 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
     </ItemGroup>
     <!--/Для NuGet-->
 
