--- a/src/Dex.MassTransit/Dex.MassTransit/Dex.MassTransit.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit/Dex.MassTransit.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <InformationalVersion>1.0</InformationalVersion>
-        <PackageVersion>1.2.30</PackageVersion>
+        <PackageVersion>1.2.31</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
