--- a/src/Dex.Response.Signing/Dex.ResponseSigning/Dex.ResponseSigning.csproj
+++ b/src/Dex.Response.Signing/Dex.ResponseSigning/Dex.ResponseSigning.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <VersionPrefix>8.0.0</VersionPrefix>
+        <InformationalVersion>8.0</InformationalVersion>
+        <PackageVersion>8.0.1</PackageVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
