--- a/src/Dex.Specification/Dex.Specifications.Extensions/Dex.Specifications.Extensions.csproj
+++ b/src/Dex.Specification/Dex.Specifications.Extensions/Dex.Specifications.Extensions.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <InformationalVersion>1.0</InformationalVersion>
-        <PackageVersion>1.1.30</PackageVersion>
+        <PackageVersion>1.1.31</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
